# Qt

WeatherApp/: CMakeLists.txt
WeatherApp/BackEnd/: BackEnd.cpp  BackEnd.h  CMakeLists.txt  IMessage.h  IParser.h  IRequestMessage.h  IResponse.h  Parser.cpp  Parser.h
WeatherApp/common/: CMakeLists.txt  IMessage.h  Message.cpp  Message.h  Tracing.h  Utils.h
WeatherApp/qml/: CustomComboBox.qml  WeatherchartView.qml  main.qml
WeatherApp/src/: BackEndMgr.cpp  BackEndMgr.h  CMakeLists.txt  Message.cpp  Message.h  Renderer.cpp  Renderer.h  ReqMsg.cpp  ReqMsg.h  RequestMsgBuilder.cpp  RequestMsgBuilder.h  Response.cpp  Response.h  SeriesUpdateHandler.cpp  SeriesUpdateHandler.h  WeatherChartItem.cpp  WeatherChartItem.h  main.cpp
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appWeatherApp.exp  appWeatherApp.ilk  appWeatherApp.lib  appweatherapp_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qt/deploy_qml_imports/: appWeatherApp.cmake
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appWeatherApp.cmake  Qt6_QmlPlugins_Imports_appWeatherApp.rsp
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.rcc/: appWeatherApp_raw_qml_0.qrc  qmake_WeatherApp.qrc  qrc_appWeatherApp_raw_qml_0.cpp  qrc_qmake_WeatherApp.cpp
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/BackEnd/: BackEnd.lib  cmake_install.cmake
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/WeatherApp/: appWeatherApp.qmltypes  qmldir
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/appWeatherApp_autogen/: deps  mocs_compilation.cpp
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/common/: cmake_install.cmake  common.lib
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/meta_types/: appWeatherApp_json_file_list.txt  appWeatherApp_json_file_list.txt.timestamp  qt6appweatherapp_debug_metatypes.json
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/qmltypes/: appWeatherApp_foreign_types.txt
build-WeatherApp-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/src/: cmake_install.cmake
(+74 files in other folders)
